# ClawAgent

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.anthropic.json  config.example.json  config.json  config.openai.json
doc/: abort_implementation.md
docs/: DEVELOPMENT_LOG.md  REFORM_PLAN.md  workspace_and_skills_plan.md
include/: ClawAgent.hpp
include/agent/: AgentRuntime.hpp
include/config/: ConfigManager.hpp
include/llm/: AnthropicClient.hpp  ILlmClient.hpp  LLMClient.hpp  LlmClientFactory.hpp  OpenAIClient.hpp
include/message/: Message.hpp  MessageManager.hpp
include/skill/: Skill.hpp  SkillManager.hpp
include/tools/: ToolManager.hpp
include/utils/: Logger.hpp  Output.hpp  OutputCallback.hpp
include/workspace/: WorkspaceManager.hpp
skills/example-skill/: SKILL.md
skills/skill-creator/: SKILL.md
src/: ClawAgent.cpp  main.cpp
src/agent/: AgentRuntime.cpp
src/config/: ConfigManager.cpp
src/llm/: AnthropicClient.cpp  LLMClient.cpp  LLMClientStub.cpp  LlmClientFactory.cpp  OpenAIClient.cpp
src/message/: Message.cpp  MessageManager.cpp
src/skill/: SkillManager.cpp
src/tools/: ToolManager.cpp
src/utils/: Logger.cpp  Output.cpp
src/workspace/: WorkspaceManager.cpp
tests/: test_abort.cpp  test_config.cpp  test_message.cpp  test_tool.cpp
